Criando repositório, serviço, resource, e configurações de comunicação com o banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.servlet.context-path=/starwarschallenge/api
 
+
+#spring.data.mongodb.username=anakin
+#spring.data.mongodb.password=padmeLoveS2
+#spring.data.mongodb.database=starWarsCollections
+#spring.data.mongodb.port=28017
+#spring.data.mongodb.host=localhost
+
+spring.data.mongodb.uri = mongodb://anakin:padmeLoveS2@localhost:27017/starWarsCollections?ssl=false&authSource=admin&authMechanism=SCRAM-SHA-1
+spring.data.mongodb.repositories.enabled=true
+spring.data.mongodb.authentication-database=admin
+
+
+#spring.data.mongodb.authentication-database= # Authentication database name.
+#spring.data.mongodb.field-naming-strategy= # Fully qualified name of the FieldNamingStrategy to use.
+#spring.data.mongodb.grid-fs-database= # GridFS database name.
+#spring.data.mongodb.repositories.enabled=true # Enable Mongo repositories.
